# ensembl-refget-proxy

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: error_response.py  utils.py
app/api/resources/: routes.py  sequence.py
app/core/: config.py  logging.py  redis.py
app/test/test_api/test_resources/: test_sequence.py
app/test/test_core/: test_config.py
app/tests/test_api/test_resources/: test_sequence.py
app/tests/test_core/: test_config.py  test_redis.py
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  redis_deployment.yaml  redis_service.yaml  service.yaml  service_node.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/internal/: kustomization.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
tests/test_api/test_resources/: test_sequence.py
tests/test_core/: test_config.py
